--- a/assets/dev/scss/frontend/_widgets.scss
+++ b/assets/dev/scss/frontend/_widgets.scss
@@ -21,6 +21,7 @@
 @import "widgets/tabs";
 @import "widgets/testimonial";
 @import "widgets/text-editor";
+@import "widgets/text-example";
 @import "widgets/toggle";
 @import "widgets/video";
 @import "widgets/rating";
