add render button

--- a/assets/dev/scss/frontend/widgets/text-example.scss
+++ b/assets/dev/scss/frontend/widgets/text-example.scss
@@ -2,10 +2,6 @@
 // Text example
 //
 .elementor-widget-text-example {
-    background-color: blue;
+    // background-color: blue;
     display: block;
-
-    .elementor-text-example-wrapper {
-        text-align: center;
-    }
 }
